--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,54 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.button{
+    z-index: 2;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.header{
+    @apply p-0 w-full sm:w-auto rounded-lg ;
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.header-open{
+    @apply opacity-100;
+    top: 64px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.header-close{
+    @apply opacity-0;
+    top: -350px;
+    /* left: 64px; */
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.menu-item{
+    @apply p-4 hover:text-indigo-800 dark:hover:text-gray-400 text-black dark:text-white bg-white sm:bg-inherit dark:bg-black/90 dark:sm:bg-inherit w-full sm:w-max border-b dark:border-0 text-center sm:border-0 cursor-pointer;
+
+    /* bg-white/90 dark:bg-gray-900/90 dark:sm:bg-inherit */
+}
+.header {
+    animation: nav-shadown 1s linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100px;
+}
+.header-nav{
+    @apply bg-white sm:bg-inherit dark:bg-black/90 dark:sm:bg-inherit;
+}
+.btn-theme{
+    animation: nav-shadown 1s linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100px;
+}
+
+@keyframes nav-shadown {
+    to {
+        @apply shadow-lg ring-1 backdrop-blur ring-gray-500/20;
+        /* dark:bg-gray-800/60 */
+        /* bg-white/60 */
+    }
 }
