--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
+html{
+    scroll-behavior: smooth;
+    scroll-padding-top: 1rem;
+}
 body{
     height: 100%;
     position: relative;
@@ -27,7 +30,8 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute
+    position: absolute;
+    scroll-behavior: smooth;
 }
 
 .header-open{
