--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -49,6 +49,18 @@ body {
   /* padding: 0.5rem 1rem; */
 }
 
+.titleH1 {
+  font-size: 3rem;
+}
+
+.titleH3 {
+  font-size: 1.5rem;
+}
+
+.icon {
+  color: var(--text-primary);
+}
+
 .background {
   color: var(--background);
   border-color: var(--border-color);
