--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -15,6 +15,9 @@
   --text-h3: 0.75rem;
 
   --text-subtitle: #2563EB;
+
+  --btn-social-media: #f1f5f9;
+
   color-scheme: light;
 }
 
@@ -27,13 +30,15 @@
   --text-subtitle: #3B82F6;
 
   --border-color: #1d293d;
+
+  --btn-social-media: #1d293d;
   color-scheme: dark;
 }
 
 @media (width >= 48rem) {
   :root {
     --text-h1: 2.5rem;
-    --text-h2: 1.5rem;
+    --text-h2: 1.75rem;
     --text-h3: 1.25rem;
   }
 }
@@ -116,6 +121,10 @@ body {
 
 .background-secondary {
   background-color: var(--background-secondary);
+}
+
+.background-btn-social-media:hover {
+  background-color: var(--btn-social-media);
 }
 
 li::marker {
