--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -13,10 +13,12 @@
   --text-h1: 1.25rem;
   --text-h2: 0.875rem;
   --text-h3: 0.75rem;
+  --text-h4: 0.65rem;
 
   --text-subtitle: #2563EB;
 
   --btn-social-media: #f1f5f9;
+  --color-linetime: #4a5565;
 
   color-scheme: light;
 }
@@ -32,6 +34,7 @@
   --border-color: #1d293d;
 
   --btn-social-media: #1d293d;
+  --color-linetime: #ffffff;
   color-scheme: dark;
 }
 
@@ -39,7 +42,8 @@
   :root {
     --text-h1: 2.5rem;
     --text-h2: 1.75rem;
-    --text-h3: 1.25rem;
+    --text-h3: 1.5rem;
+    --text-h4: 1.25rem;
   }
 }
 
@@ -104,6 +108,10 @@ body {
   font-size: var(--text-h3);
 }
 
+.titleH4 {
+  font-size: var(--text-h4);
+}
+
 .subtitle {
   color: var(--text-subtitle);
   font-weight: 600;
@@ -127,6 +135,19 @@ body {
   background-color: var(--btn-social-media);
 }
 
+.line-time {
+  border-color: var(--color-linetime);
+}
+
 li::marker {
   color: transparent;
+}
+
+.brillo {
+  /* background-color: rgba(255, 255, 255, 0.4); */
+  -webkit-backdrop-filter: brightness(150%);
+  backdrop-filter: brightness(150%);
+  /* padding: 20px;
+  margin: 30px; */
+  font-weight: bold;
 }
